--- a/src/App.css
+++ b/src/App.css
@@ -2959,34 +2959,35 @@ input:-webkit-autofill {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25);
-  z-index: 1000;
 }
 
-.modalWrap {
+/*.modalWrap {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 2000;
+  z-index: 10;
 }
+*/
 
 .modal {
   position: absolute;
-  top: 50%;
+  top: 10em;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
   background-color: white;
-  width: 95%;
+  width: 80%;
   padding: 2rem;
-  max-width: 60rem;
+  max-width: 40rem;
   height: auto;
   pointer-events: all;
   max-height: 95vh;
   overflow: auto;
+  z-index: 10;
 }
 
 .exit {
@@ -3006,7 +3007,7 @@ input:-webkit-autofill {
 .catHeader {
   background: #9a4242ed;
   position: absolute;
-  z-index: 10;
+  z-index: 9;
   width: 99.5%;
   bottom: 5%;
   left: 50%;
@@ -3503,4 +3504,16 @@ input:-webkit-autofill {
   .dashboardLayout .container {
     left: 2.5em !important;
   }
+}
+
+.addWorkout {
+  position: absolute;
+  top: 5em;
+  right: 10%;
+  padding: 5px 10px;
+  border: 2px solid #0000004f;
+  border-radius: 20px;
+  background: #9a4242ed;
+  color: white;
+  cursor: pointer;
 }
