--- a/src/App.css
+++ b/src/App.css
@@ -2959,6 +2959,7 @@ input:-webkit-autofill {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25);
+  z-index: 9;
 }
 
 /*.modalWrap {
@@ -2973,6 +2974,7 @@ input:-webkit-autofill {
 */
 
 .modal {
+  border-radius: 10px;
   position: absolute;
   top: 10em;
   left: 50%;
@@ -3007,7 +3009,18 @@ input:-webkit-autofill {
 .catHeader {
   background: #9a4242ed;
   position: absolute;
-  z-index: 9;
+  z-index: 8;
+  width: 99.5%;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 3% 0;
+}
+
+.catHeader2 {
+  background: #494545ed;
+  position: absolute;
+  z-index: 8;
   width: 99.5%;
   bottom: 5%;
   left: 50%;
@@ -3155,7 +3168,7 @@ input:-webkit-autofill {
 }
 
 .MuiTableCell-head {
-  background: #6d3434ed !important;
+  background: #6d3434 !important;
   text-align: center !important;
 }
 
@@ -3247,35 +3260,28 @@ input:-webkit-autofill {
   list-style: none !important;
 }
 
-/* width */
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-  display: none;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #333;
-  border-radius: 10px;
-  display: none;
+  background: #acacab;
+  border-radius: 20px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #333;
+  background: #acacab;
   display: block;
 }
 
 .side-menu {
   position: fixed !important;
   background: #222220 !important;
-  width: 300px !important;
+  width: 250px !important;
   height: 100% !important;
   box-sizing: border-box !important;
   padding: 50px 20px !important;
@@ -3364,8 +3370,8 @@ input:-webkit-autofill {
 .side-menu .main-menu {
   margin: 5px 0 !important;
   position: relative !important;
-  max-height: 350px !important;
-  overflow-y: scroll !important;
+  max-height: 450px !important;
+  /*overflow-y: scroll !important;*/
   overflow-x: hidden !important;
 }
 
@@ -3482,7 +3488,7 @@ input:-webkit-autofill {
 .dashboardLayout .container {
   position: relative !important;
   margin: 0 auto !important;
-  left: 150px;
+  left: 126px;
   transition: left 0.2s ease-in !important;
   padding: 50px !important;
   box-sizing: border-box !important;
@@ -3506,6 +3512,21 @@ input:-webkit-autofill {
   }
 }
 
+@media (max-width: 1400px) {
+  .workoutsRow {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 700px) {
+  .overview {
+    width: 95% !important;
+  }
+  .catOverview {
+    width: 95% !important;
+  }
+}
+
 .addWorkout {
   position: absolute;
   top: 5em;
@@ -3516,4 +3537,8 @@ input:-webkit-autofill {
   background: #9a4242ed;
   color: white;
   cursor: pointer;
+}
+
+.MTableToolbar-searchField-10 {
+  width: 25em !important;
 }
